# Project_Management

./: .flake8  .gitignore  Docker-compose.yml  Dockerfile  Makefile  README.md  manage.py  nats-cluster.yaml  nats.py  pyproject.toml  requirements.txt  verify_nats.py
Project_main/: asgi.py  celery.py  pagination.py  urls.py  wsgi.py
Project_main/settings/: __init__.py  base.py  celery.py  local.py
apps/Effort/: apps.py  models.py  serializers.py  urls.py  views.py
apps/Effort/migrations/: 0001_initial.py  0002_alter_effortcalculation_start_time.py  0003_alter_effortcalculation_start_time.py  0004_alter_effortcalculation_end_time_and_more.py  0005_alter_effortcalculation_end_time_and_more.py  0006_alter_effortcalculation_remind.py  0007_alter_effortcalculation_start_time.py  0008_alter_effortcalculation_end_time_and_more.py
apps/Project/: admin.py  models.py  nats_setup.py  nats_subscriber.py  serializers.py  urls.py  views.py
apps/Project/migrations/: 0001_initial.py  0002_dependencies_file_remove_equipments_assigned_to_and_more.py  0002_file.py  0002_initial.py  0002_project_last_updated.py  0002_remove_equipments_assigned_to_delete_inventory_and_more.py  0003_alter_project_assigned_members_and_more.py  (+25 more)
apps/Report/: urls.py
apps/Resource/: admin.py  apps.py  models.py  nats_publisher.py  publisher.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/Task/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/WorkSpace/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
auth_mgmt/: models.py
(+15 files in other folders)
